--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.9",
     "axios": "^0.26.0",
+    "dayjs": "^1.10.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "jest": "^27.5.1",
