--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "jest": "^27.5.1",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
