--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "tim-js-sdk": "^2.17.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
