--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "dayjs": "^1.10.8",
+    "echarts": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
